# pg2arrow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hton.h  main.cc  pg2arrow.cc  pg2arrow.h
src/: builder.cc  hton.h  main.cc  pg2arrow.h  schema.cc  sql_copy.cc
tools/: dump_schema.py  sample_data.py
